sumo/tests/duarouter/trips/errors/vehicle_false_departpos/errors.duarouter
Error: Invalid departPos definition for vehicle '';
 must be one of ("random", "random_free", "free", "base", "pwagSimple", "pwagGeneric", "maxSpeedGap", or a float)
Quitting (on error).
